--- a/checkout.html
+++ b/checkout.html
@@ -2,131 +2,95 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <title>Lugx Gaming - Checkout</title>
+  <title>Lugx Gaming - Check out</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+  <!--
 
+  TemplateMo 589 lugx gaming
+
+  https://templatemo.com/tm-589-lugx-gaming
+
+  -->
 </head>
 
 <body>
 
-  <header class="header-area">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Lugx Gaming"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#lugxgame-navbar"
-              aria-controls="lugxgame-navbar" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+<!-- ***** Preloader Start ***** -->
+<div id="js-preloader" class="js-preloader">
+  <div class="preloader-inner">
+    <span class="dot"></span>
+    <div class="dots">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</div>
+<!-- ***** Preloader End ***** -->
 
-            <div class="collapse navbar-collapse" id="lugxgame-navbar">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="shop.html" class="nav-link">Shop</a>
-                </li>
-                <li class="nav-item active">
-                  <a href="checkout.html" class="nav-link">Checkout</a>
-                </li>
-                <li class="nav-item">
-                  <a href="contact.html" class="nav-link">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <nav class="main-nav">
+          <!-- ***** Logo Start ***** -->
+          <a href="index.html" class="logo">
+            <img src="assets/images/logo.png" alt="" style="width: 158px;">
+          </a>
+          <!-- ***** Logo End ***** -->
+          <!-- ***** Menu Start ***** -->
+          <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html">Our Shop</a></li>
+            <li><a href="product-details.html" class="active">Product Details</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+          <a class='menu-trigger'>
+            <span>Menu</span>
+          </a>
+          <!-- ***** Menu End ***** -->
+        </nav>
       </div>
     </div>
-  </header>
+  </div>
+</header>
+<!-- ***** Header Area End ***** -->
 
-  <section class="checkout-page">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2 class="page-title">Checkout</h2>
-        </div>
+<div class="page-heading header-text">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h3>Check Out</h3>
       </div>
+    </div>
+  </div>
+</div>
+
+  <section class="checkout-page" style="margin-top: 50px">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8">
           <div class="checkout-form">
             <div class="row">
-              <div class="col-lg-6">
-                <h4>Billing Details</h4>
-                <form action="#">
-                  <div class="form-group">
-                    <label for="first-name">First Name *</label>
-                    <input type="text" class="form-control" id="first-name" aria-describedby="first-name"
-                      placeholder="Enter your first name">
-                  </div>
-                  <div class="form-group">
-                    <label for="last-name">Last Name *</label>
-                    <input type="text" class="form-control" id="last-name" aria-describedby="last-name"
-                      placeholder="Enter your last name">
-                  </div>
-                  <div class="form-group">
-                    <label for="email">Email Address *</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="email"
-                      placeholder="Enter your email address">
-                  </div>
-                  <div class="form-group">
-                    <label for="phone">Phone Number *</label>
-                    <input type="text" class="form-control" id="phone" aria-describedby="phone"
-                      placeholder="Enter your phone number">
-                  </div>
-                </form>
-              </div>
-              <div class="col-lg-6">
-                <h4>Payment Method</h4>
-                <form action="#">
-                  <div class="form-group">
-                    <label for="payment-method">Payment Method</label>
-                    <select class="form-control" id="payment-method">
-                      <option value="">Select Payment Method</option>
-                      <option value="paypal">Paypal</option>
-                      <option value="visa">Visa</option>
-                      <option value="mastercard">Mastercard</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <label for="card-number">Card Number</label>
-                    <input type="text" class="form-control" id="card-number" aria-describedby="card-number"
-                      placeholder="Enter your card number">
-                  </div>
-                  <div class="form-group">
-                    <label for="card-expire">Card Expiration</label>
-                    <input type="text" class="form-control" id="card-expire" aria-describedby="card-expire"
-                      placeholder="MM/YY">
-                  </div>
-                  <div class="form-group">
-                    <label for="card-cvc">Card CVC</label>
-                    <input type="text" class="form-control" id="card-cvc" aria-describedby="card-cvc"
-                      placeholder="Enter your card CVC">
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div class="row">
               <div class="col-12">
-                <h4 class="mt-4">Order Summary</h4>
-                <table class="table table-bordered">
+                <h4>Order Summary</h4>
+                <table class="table table-bordered" style="margin-top: 30px">
                   <thead>
                     <tr>
                       <th scope="col">Product</th>
@@ -153,8 +117,12 @@
                       <td>$40.00</td>
                     </tr>
                     <tr>
+                      <td colspan="3" class="text-right">Discount</td>
+                      <td style="color: red">0%</td>
+                    </tr>
+                    <tr>
                       <td colspan="3" class="text-right">Total</td>
-                      <td>$96.00</td>
+                      <td style="color: #0071f8">$96.00</td>
                     </tr>
                   </tbody>
                 </table>
@@ -163,54 +131,45 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="order-summary">
-            <h4>Order Summary</h4>
-            <ul>
-              <li>
-                <span>Subtotal</span>
-                <span>$96.00</span>
-              </li>
-              <li>
-                <span>Shipping</span>
-                <span>Free</span>
-              </li>
-              <li>
-                <span>Tax (8%)</span>
-                <span>$7.68</span>
-              </li>
-              <li>
-                <span>Total</span>
-                <span>$103.68</span>
-              </li>
-            </ul>
-            <button class="btn btn-primary" type="submit">Place Order</button>
+          <div class="more-info">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="tabs-content">
+                    // QR Code display here
+                    <h4 class="mt-4">QR Code here</h4>
+                    <div class="row">
+                        <div class="tab-content" id="myTabContent">
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright &copy; 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow"
-              href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
-        </div>
-      </div>
+<footer>
+  <div class="container">
+    <div class="col-lg-12">
+      <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
     </div>
-  </footer>
+  </div>
+</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-  <!-- Additional Scripts -->
-  <script src="assets/js/custom.js"></script>
-  <script src="assets/js/owl.js"></script>
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/counter.js"></script>
+<!-- Scripts -->
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/isotope.min.js"></script>
+<script src="assets/js/owl-carousel.js"></script>
+<script src="assets/js/counter.js"></script>
+<script src="assets/js/custom.js"></script>
 
 </body>
-
 </html>
