--- a/checkout.html
+++ b/checkout.html
@@ -18,7 +18,11 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!--
+
+
 
   TemplateMo 589 lugx gaming
 
@@ -135,9 +139,14 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="tabs-content">
-                    // QR Code display here
-                    <h4 class="mt-4">QR Code here</h4>
+<!--                  <div class="tabs-content">-->
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <div class="qr-code" id="qr-code">
+                          <img src="assets/images/qr-code.jpg" alt="QR Code">
+                        </div>
+                      </div>
+                    </div>
                     <div class="row">
                         <div class="tab-content" id="myTabContent">
 
@@ -161,6 +170,20 @@
     </div>
   </div>
 </footer>
+
+<script>
+  document.getElementById("qr-code").addEventListener("click", function() {
+    Swal.fire({
+      icon: "success",
+      title: "Thanh toán thành công",
+      text: "Cảm ơn bạn đã mua hàng",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        window.location.href = "index.html";
+      }
+    });
+  });
+</script>
 
 <!-- Scripts -->
 <!-- Bootstrap core JavaScript -->
