--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming Template - Contact Page</title>
+  <title>Mẫu Lugx Gaming - Trang Liên Hệ</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <!--
 
-TemplateMo 589 lugx gaming
+  TemplateMo 589 lugx gaming
 
-https://templatemo.com/tm-589-lugx-gaming
+  https://templatemo.com/tm-589-lugx-gaming
 
 -->
-  </head>
+</head>
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
+  <!-- ***** Phần tải trước Bắt đầu ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -41,44 +41,44 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+  <!-- ***** Phần tải trước Kết thúc ***** -->
 
-  <!-- ***** Header Area Start ***** -->
+  <!-- ***** Phần Header Bắt đầu ***** -->
   <header class="header-area header-sticky">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="" style="width: 158px;">
-                    </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
-                      <li><a href="contact.html" class="active">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
-                  </ul>   
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
-                    <!-- ***** Menu End ***** -->
-                </nav>
-            </div>
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Bắt đầu ***** -->
+            <a href="index.html" class="logo">
+              <img src="assets/images/logo.png" alt="" style="width: 158px;">
+            </a>
+            <!-- ***** Logo Kết thúc ***** -->
+            <!-- ***** Menu Bắt đầu ***** -->
+            <ul class="nav">
+              <li><a href="index.html">Trang Chủ</a></li>
+              <li><a href="shop.html">Cửa Hàng</a></li>
+              <li><a href="product-details.html">Chi Tiết Sản Phẩm</a></li>
+              <li><a href="contact.html" class="active">Liên Hệ</a></li>
+              <li><a href="#">Đăng Nhập</a></li>
+            </ul>
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Menu Kết thúc ***** -->
+          </nav>
         </div>
+      </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
+  <!-- ***** Phần Header Kết thúc ***** -->
 
   <div class="page-heading header-text">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h3>Contact Us</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  Contact Us</span>
+          <h3>Liên Hệ</h3>
+          <span class="breadcrumb"><a href="#">Trang Chủ</a>  >  Liên Hệ</span>
         </div>
       </div>
     </div>
@@ -90,13 +90,13 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-6 align-self-center">
           <div class="left-text">
             <div class="section-heading">
-              <h6>Contact Us</h6>
-              <h2>Say Hello!</h2>
+              <h6>Liên Hệ</h6>
+              <h2>Nói Xin Chào!</h2>
             </div>
-            <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+            <p>Mẫu LUGX Gaming dựa trên khung CSS Bootstrap 5 mới nhất. Mẫu này được cung cấp bởi TemplateMo và phù hợp cho các trang web thương mại điện tử cửa hàng game của bạn. Hãy thoải mái sử dụng cho bất kỳ mục đích nào. Cảm ơn bạn.</p>
             <ul>
-              <li><span>Address</span> Sunny Isles Beach, FL 33160, United States</li>
-              <li><span>Phone</span> +123 456 7890</li>
+              <li><span>Địa chỉ</span> Sunny Isles Beach, FL 33160, Hoa Kỳ</li>
+              <li><span>Điện thoại</span> +123 456 7890</li>
               <li><span>Email</span> lugx@contact.com</li>
             </ul>
           </div>
@@ -106,7 +106,7 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div id="map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth" width="100%" height="325px" frameborder="0" style="border:0; border-radius: 23px;" allowfullscreen=""></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1svi!2sth!4v1642869952544!5m2!1svi!2sth" width="100%" height="325px" frameborder="0" style="border:0; border-radius: 23px;" allowfullscreen=""></iframe>
                 </div>
               </div>
               <div class="col-lg-12">
@@ -114,32 +114,32 @@ https://templatemo.com/tm-589-lugx-gaming
                   <div class="row">
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                        <input type="name" name="name" id="name" placeholder="Tên của bạn..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Your Surname..." autocomplete="on" required>
+                        <input type="surname" name="surname" id="surname" placeholder="Họ của bạn..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Email của bạn..." required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                        <input type="subject" name="subject" id="subject" placeholder="Chủ đề..." autocomplete="on">
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <textarea name="message" id="message" placeholder="Tin nhắn của bạn"></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                        <button type="submit" id="form-submit" class="orange-button">Gửi Tin Nhắn Ngay</button>
                       </fieldset>
                     </div>
                   </div>
@@ -150,12 +150,12 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Bản quyền © 2048 Công Ty LUGX Gaming. Mọi quyền được bảo lưu. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Thiết kế: TemplateMo</a></p>
       </div>
     </div>
   </footer>
@@ -169,5 +169,6 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
 
-  </body>
+</body>
+
 </html>
