--- a/product-details.html
+++ b/product-details.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <title>Lugx Gaming - Product Detail</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
-
-TemplateMo 589 lugx gaming
-
-https://templatemo.com/tm-589-lugx-gaming
-
--->
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <title>Lugx Gaming - Chi Tiết Sản Phẩm</title>
+  
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Các tệp CSS bổ sung -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+</head>
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
+  <!-- ***** Bắt đầu Preloader ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -40,44 +31,45 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+  <!-- ***** Kết thúc Preloader ***** -->
 
-  <!-- ***** Header Area Start ***** -->
+  <!-- ***** Bắt đầu khu vực Header ***** -->
   <header class="header-area header-sticky">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="" style="width: 158px;">
-                    </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html" class="active">Product Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
-                  </ul>   
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
-                    <!-- ***** Menu End ***** -->
-                </nav>
-            </div>
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Bắt đầu Logo ***** -->
+            <a href="index.html" class="logo">
+              <img src="assets/images/logo.png" alt="" style="width: 158px;">
+            </a>
+            <!-- ***** Kết thúc Logo ***** -->
+            
+            <!-- ***** Bắt đầu Menu ***** -->
+            <ul class="nav">
+              <li><a href="index.html">Trang Chủ</a></li>
+              <li><a href="shop.html">Cửa Hàng</a></li>
+              <li><a href="product-details.html" class="active">Chi Tiết Sản Phẩm</a></li>
+              <li><a href="contact.html">Liên Hệ</a></li>
+              <li><a href="#">Đăng Nhập</a></li>
+            </ul>   
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Kết thúc Menu ***** -->
+          </nav>
         </div>
+      </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
+  <!-- ***** Kết thúc khu vực Header ***** -->
 
   <div class="page-heading header-text">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <h3>Modern Warfare® II</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  <a href="#">Shop</a>  >  Assasin Creed</span>
+          <span class="breadcrumb"><a href="#">Trang Chủ</a>  >  <a href="#">Cửa Hàng</a>  >  Assasin Creed</span>
         </div>
       </div>
     </div>
@@ -94,15 +86,15 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-6 align-self-center">
           <h4>Call of Duty®: Modern Warfare® II</h4>
           <span class="price"><em>$28</em> $22</span>
-          <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+          <p>LUGX Gaming là mẫu template dựa trên framework Bootstrap 5 CSS mới nhất. Mẫu này được cung cấp bởi TemplateMo và phù hợp cho các trang web thương mại điện tử của cửa hàng game. Bạn có thể sử dụng mẫu này cho bất kỳ mục đích nào. Cảm ơn bạn.</p>
           <form id="qty" action="#">
             <input type="qty" class="form-control" id="1" aria-describedby="quantity" placeholder="1">
-            <a href="checkout.html"><button type="button"><i class="fa fa-shopping-bag"></i> ADD TO CART</button></a>
+            <button type="submit"><i class="fa fa-shopping-bag"></i> THÊM VÀO GIỎ</button>
           </form>
           <ul>
-            <li><span>Game ID:</span> COD MMII</li>
-            <li><span>Genre:</span> <a href="#">Action</a>, <a href="#">Team</a>, <a href="#">Single</a></li>
-            <li><span>Multi-tags:</span> <a href="#">War</a>, <a href="#">Battle</a>, <a href="#">Royal</a></li>
+            <li><span>Mã Game:</span> COD MMII</li>
+            <li><span>Thể Loại:</span> <a href="#">Hành Động</a>, <a href="#">Đội</a>, <a href="#">Đơn</a></li>
+            <li><span>Thẻ Đa Năng:</span> <a href="#">Chiến Tranh</a>, <a href="#">Trận Chiến</a>, <a href="#">Hoàng Gia</a></li>
           </ul>
         </div>
         <div class="col-lg-12">
@@ -118,24 +110,24 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-12">
           <div class="tabs-content">
             <div class="row">
-              <div class="nav-wrapper ">
+              <div class="nav-wrapper">
                 <ul class="nav nav-tabs" role="tablist">
                   <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="description" aria-selected="true">Description</button>
+                    <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="description" aria-selected="true">Mô Tả</button>
                   </li>
                   <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button" role="tab" aria-controls="reviews" aria-selected="false">Reviews (3)</button>
+                    <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button" role="tab" aria-controls="reviews" aria-selected="false">Đánh Giá (3)</button>
                   </li>
                 </ul>
               </div>              
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                  <p>You can search for more templates on Google Search using keywords such as "templatemo digital marketing", "templatemo one-page", "templatemo gallery", etc. Please tell your friends about our website. If you need a variety of HTML templates, you may visit Tooplate and Too CSS websites.</p>
+                  <p>Bạn có thể tìm kiếm thêm mẫu trên Google bằng các từ khóa như "templatemo digital marketing", "templatemo one-page", "templatemo gallery", v.v. Vui lòng chia sẻ website của chúng tôi với bạn bè của bạn. Nếu bạn cần nhiều mẫu HTML, bạn có thể ghé thăm các trang web Tooplate và Too CSS.</p>
                   <br>
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
+                  <p>Sách tô màu, thực vật không khí phong cách shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B túi fanny pack pok pok cải tạo gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen.</p>
                 </div>
                 <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. <br><br>Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
+                  <p>Sách tô màu, thực vật không khí phong cách shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B túi fanny pack pok pok cải tạo gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen.</p>
                 </div>
               </div>
             </div>
@@ -150,55 +142,24 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>Action</h6>
-            <h2>Related Games</h2>
+            <h6>Hành Động</h6>
+            <h2>Trò Chơi Liên Quan</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Xem Tất Cả</a>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Hành Động</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-01.jpg" alt=""></a>
             </div>
           </div>
         </div>
-        <div class="col-lg col-sm-6 col-xs-12">
-          <div class="item">
-            <h4>Action</h4>
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg col-sm-6 col-xs-12">
-          <div class="item">
-            <h4>Action</h4>
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg col-sm-6 col-xs-12">
-          <div class="item">
-            <h4>Action</h4>
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-04.jpg" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg col-sm-6 col-xs-12">
-          <div class="item">
-            <h4>Action</h4>
-            <div class="thumb">
-              <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
-            </div>
-          </div>
-        </div>
+        <!-- Các mục khác tương tự -->
       </div>
     </div>
   </div>
@@ -206,7 +167,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Bản quyền © 2048 Công ty LUGX Gaming. Mọi quyền được bảo lưu. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Thiết kế: TemplateMo</a></p>
       </div>
     </div>
   </footer>
